# doomsday

./: .gitignore  CLAUDE.md  vercel.json
app/: .env.devnet  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
app/.github/: dependabot.yml  pull_request_template.md
app/.ooda/: ROADMAP.md
app/deploy/: .env.production.example  Dockerfile.frontend  README.md  deploy.sh  docker-compose.prod.yml  nginx.conf  setup-droplet.sh
app/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DEVNET.md  FEATURES.md  INFRASTRUCTURE.md  LAUNCH_CHECKLIST.md  ONCALL.md  STORE-API.md
app/programs/: Anchor.toml  Cargo.toml
app/programs/prediction-market/: Cargo.toml
app/programs/prediction-market/src/: errors.rs  lib.rs
app/programs/prediction-market/src/instructions/: cancel_event.rs  claim_refund.rs  claim_winnings.rs  create_event.rs  initialize.rs  mod.rs  place_bet.rs  resolve_event.rs  update_platform.rs
app/programs/prediction-market/src/state/: bet.rs  event.rs  mod.rs  platform_config.rs  user_stats.rs
app/programs/prediction-market/tests/: prediction_market.ts
app/public/: manifest.json  offline.html
app/scripts/: airdrop.ts  check-event.ts  claim-winnings.ts  create-quick-event.ts  create-test-event.ts  create-tokens.ts  deploy-amm.sh  distribute-tokens.ts  fetch-events.ts  fetch-user-bets.ts  initialize-amm.ts  initialize-event-vaults.ts  initialize-platform.ts  migrate-platform.ts  place-bet.ts  resolve-event.ts
(+456 files in other folders)
